# smell

./: .gitignore  README.md  pyproject.toml
smell/: cli.py
tests/: test_cli.py
